增加英国国家和车标

--- a/src/com/sandy/nicky/car/constants/car.properties
+++ b/src/com/sandy/nicky/car/constants/car.properties
@@ -1,6 +1,7 @@
-cn=byd,dihao,dongfeng,foton,haima,geely,jianghuai,jiefang,ruiqi,changan,greatwall,zhonghua
+ge=audi,benz,volkswagen,bmw,lorinser,maybach,opel,porsche,smart
+fr=citroen,peugeot,renault,venturi
 us=gmc,jeep,rossion,buick,dodge,ford,hummer,cadillac,corvette,chrysler,lincon,pontiac,saturn,chevrolet
 jp=honda,toyota,lexus,suzuki,mazda,nissan,acura,mitsubishi,subaru,infiniti,mitsuoka
-ge=audi,benz,volkswagen,bmw,lorinser,maybach,opel,porsche,rr,smart
 it=alfa_romeo,bugatti,ferrari,fiat,lamborghini,maserati,pagani
-fr=citroen,peugeot,renault,venturi
+en=aston_martin,bentley,jaguar,land_rover,mclaren,rover,rr
+cn=byd,dihao,dongfeng,foton,haima,geely,jianghuai,jiefang,ruiqi,changan,greatwall,zhonghua
